--- a/plugin.xml
+++ b/plugin.xml
@@ -6,8 +6,8 @@
         name="hibiscus.airplus" version="1.0.0" class="org.jameica.hibiscus.airplus.Plugin">
 
   <description>Hibiscus-Support für AirPlus</description>
-  <url></url>
-  <homepage></homepage>
+  <url>https://github.com/littleyoda/hibiscus.airplus</url>
+  <homepage>https://github.com/littleyoda/hibiscus.airplus</homepage>
   <license></license>
 
   <requires jameica="2.6.0+">
